Setup in program.cs and added AppUser which inherits from IdentityUser

--- a/CNewsProject/appsettings.json
+++ b/CNewsProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CNewsProject-0107b9e5-b390-4b54-b226-075a251d37e8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=CNewsLocalImage;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
