--- a/CNewsProject/appsettings.json
+++ b/CNewsProject/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpServer": "smtp.gmail.com",
+  "SmtpPort": "465",
+  "SmtpUsername": "info.cnewsproject@gmail.com",
+  "SmtpPassword": "knlg pnnz guaq inqg",
+  "SenderEmail": "info.cnewsproject@gmail.com",
+  "SenderName": "CNewsInfo"
 }
