--- a/CNewsProject/appsettings.json
+++ b/CNewsProject/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=CNewsLocalImage;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "GlobalConnection": "Data Source=dreammaker-it.se;Initial Catalog=cnewssecretdb;User ID=cnewsadmin;Password=SugMinRollBitch1337420;Encrypt=False;Trust Server Certificate=True"
+    "GlobalConnection": "Data Source=dreammaker-it.se;Initial Catalog=cnewssecretdb;User ID=cnewsadmin;Password=SugMinRollBitch1337420;Encrypt=False;Trust Server Certificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
