--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
 
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.1" />
+
+    <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
     
    
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
@@ -27,6 +29,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.0" />
+    <PackageReference Include="System.Device.Gpio" Version="3.2.0" />
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
 
   </ItemGroup>
 
