--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.1" />
 
     <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
+
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     
    
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
