--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+
+    <PackageReference Include="Azure.AI.Translation.Document" Version="1.0.0" />
 
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
 
