--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -11,6 +11,8 @@
 
     <PackageReference Include="Azure.AI.Translation.Document" Version="1.0.0" />
 
+    <PackageReference Include="Azure.Data.Tables" Version="12.9.0" />
+
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
 
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
