--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -35,6 +35,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Stripe.net" Version="45.11.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.1" />
