--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -19,6 +19,8 @@
 
     <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
 
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
+
     <PackageReference Include="MimeKit" Version="4.7.1" />
 
     
