This will give Conflict

--- a/CNewsProject/appsettings.json
+++ b/CNewsProject/appsettings.json
@@ -25,5 +25,8 @@
         "og" : "images",
         "sm" : "images-sm",
         "md" : "images-md"
+    },
+    "NewsLetterSettings" : {
+        "Everything" : "Nothing"
     }
 }
