--- a/CNewsProject/CNewsProject.csproj
+++ b/CNewsProject/CNewsProject.csproj
@@ -17,6 +17,8 @@
 
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
 
+    <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
+
     <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
 
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
@@ -44,6 +46,12 @@
     <PackageReference Include="System.Device.Gpio" Version="3.2.0" />
     <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="timerschedule.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
